# ai-sales-agent-claude

./: .gitignore  .infisical.json  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  README.md  conftest.py  pyproject.toml
.claude/agents/: evaluator.md  generator.md  product-owner.md  tester.md
artifacts/: handoff_sprint_4.md  handoff_sprint_5_teste.md  handoff_sprint_6.md  handoff_sprint_7.md  pre_homolog_review_sprint_10.md  pre_homolog_review_sprint_9_hotfix.md  qa_sprint_0.md  qa_sprint_1.md  qa_sprint_10.md  qa_sprint_2.md  qa_sprint_3.md  qa_sprint_3_r1.md  qa_sprint_4_r1.md  qa_sprint_4_r2.md  qa_sprint_5_teste.md  qa_sprint_5_teste_r1.md  qa_sprint_5_teste_r2.md  qa_sprint_5_teste_r3.md  qa_sprint_6.json  qa_sprint_6.md  qa_sprint_6_r1.json  qa_sprint_6_r1.md  qa_sprint_6_r2.json  qa_sprint_6_r2.md  qa_sprint_7.md  qa_sprint_8.md  qa_sprint_9.md  qa_sprint_9_hotfix.md  spec.md  sprint_contract.md  sweep_bot_sprint_10.md  sweep_bot_sprint_10_v0104.md
docs/: BACKLOG.md  BUGS.md  COST_REPORT.md  DEPRECATIONS.md  DESIGN.md  FEEDBACK.md  FRONTEND.md  GOTCHAS.yaml  HOMOLOGACAO.md  PLANS.md  PRE_HOMOLOGATION_REVIEW.md  PRODUCT_SENSE.md  QUALITY_SCORE.md  RELIABILITY.md  SECURITY.md  VERSIONING.md
docs/design-docs/: D030-erp-adapter-and-contact-ownership.md  D031-analyst-agent-observability.md  D032-analyst-interface-and-nl2sql.md  harness-codex-playbook.md  harness.md  index.md  memory-stores.md
docs/exec-plans/: tech-debt-tracker.md
docs/exec-plans/active/: handoff_sprint_10.md  homologacao_sprint-10.md  homologacao_sprint-5.md  homologacao_sprint-6.md  homologacao_sprint-8.md  homologacao_sprint2.md  homologacao_sprint4.md  infra-dev.md  infra-staging.md  pre-pilot-hardening.md  sprint-4-gestor-dashboard.md  sprint-5-observabilidade.md  sprint-5-teste-top-produtos.md  sprint-6-pre-pilot-hardening.md  sprint-7-notificacao-gestor.md  sprint-8-efos-backup.md  sprint-9-commerce-audio.md
docs/exec-plans/completed/: homologacao_sprint-10.md  homologacao_sprint-3.md  homologacao_sprint-5-teste.md  homologacao_sprint-7.md  homologacao_sprint-9.md  homologacao_sprint2.md  homologacao_sprint4.md  retro-sprint-3.md  retro-sprint-4.md  sprint-0-catalogo.md  sprint-1-infra-app.md  sprint-10-fechamento.md  sprint-10-hotfixes-d030-f07-deprecacao.md  sprint-2-agente-cliente.md  sprint-3-agentrep.md  sprint-5-teste-top-produtos.md  sprint-6-pre-pilot-hardening.md  sprint-9-fechamento.md
docs/product-specs/: agent-gestor.md  index.md
infra/: docker-compose.dev.yml  docker-compose.staging.yml  init-db.sql  otel-collector-config.yaml
infra/grafana/provisioning/datasources/: datasources.yml
output/: .env.example  alembic.ini  pyproject.toml
output/alembic/: env.py
output/alembic/versions/: 0001_catalog_initial.py  0002_imagem_local.py  0003_tenants_usuarios.py  0004_crawl_schedule.py  0005_whatsapp_instancias.py  0006_fk_produtos_tenant.py  0007_clientes_b2b.py  0008_representantes.py  0009_conversas.py  0010_mensagens_conversa.py  0011_pedidos.py  0012_itens_pedido.py  0013_clientes_b2b_representante_id.py  0014_clientes_b2b_telefone_nullable.py  0015_gestores_pedidos_index.py  0016_feedbacks.py  0017_clientes_b2b_nome_contato.py  0018_sync_runs.py  0019_sync_artifacts.py  0020_commerce_products_accounts.py  0021_commerce_orders.py  0022_commerce_inventory_sales.py  0023_commerce_vendedores.py  0024_pedidos_ficticio.py  0025_d030_contacts_and_account_extras.py  0026_sync_schedule_and_gestor_role.py  0027_commerce_products_embedding.py  0028_drop_produtos_legacy.py  0029_pedidos_observacao.py  0030_commerce_upsert_indexes.py
output/deploy/: com.jmb.efos-sync.plist
output/scripts/: migrate_embeddings.py  provision_tenant.py  smoke_sprint_10.py
output/src/: __init__.py  main.py
output/src/agents/: config.py  repo.py  repo_feedback.py  service.py  types.py  ui.py
output/src/agents/runtime/: _history.py  _retry.py  agent_cliente.py  agent_gestor.py  agent_rep.py
output/src/catalog/: config.py  repo.py  service.py  types.py  ui.py
output/src/catalog/runtime/: enricher.py  scheduler_job.py
output/src/catalog/templates/: produtos.html
output/src/commerce/: repo.py  types.py
output/src/dashboard/: __init__.py  ui.py
output/src/dashboard/templates/: base.html  clientes.html  clientes_editar.html  clientes_novo.html  configuracoes.html  contatos.html  (+12 more)
output/src/integrations/: config.py  repo.py  types.py
output/src/observability/: langfuse_anthropic.py
output/src/orders/: config.py  repo.py  service.py  types.py
output/src/providers/: auth.py  db.py  format.py  scheduler.py  telemetry.py  tenant_context.py
output/src/tenants/: config.py  repo.py  service.py  types.py  ui.py
output/src/tests/: conftest.py
prompts/: evaluator.md  generator.md  planner.md
scripts/: check_gotchas.py  check_tool_coverage.py  deploy.sh  doc-gardening.md  evaluator_checkpoint.py  health-check.sh  health_check.py  seed_homologacao_sprint-3.py  seed_homologacao_sprint-6.py  seed_homologacao_sprint-8.py  seed_homologacao_sprint2.py  seed_homologacao_sprint4.py  setup.sh  smoke_gate.sh  smoke_gate_sprint4.sh  smoke_sprint_5_teste.sh  smoke_sprint_6.py  smoke_sprint_7.py  smoke_sprint_8.py  smoke_sprint_9.py  smoke_ui.sh  staging-up.sh  verify_homolog_preconditions.py
scripts/managed-agents/: README.md  init_agents.py  init_memory_stores.py  run_sprint.py
(+80 files in other folders)
